# factorial

./: .travis.yml  CHANGELOG.md  Cargo.toml  README.md  build.rs
.github/: dependabot.yml
benches/: benchmark.rs
examples/: build.rs
src/: array.rs  lib.rs
