[package]
name = "factorial"
version = "0.2.1"
authors = ["Thom Wiggers <thom@thomwiggers.nl>"]
description = "Convenient methods to compute the factorial, optionally checked."
repository = "https://github.com/thomwiggers/factorial/"
readme = "README.md"
keywords = ["mathematics", "maths", "factorial", "combinatorics"]
categories = ["science", "algorithms"]
edition = "2018"
license = "MIT"

[badges]
travis-ci = { repository = "thomwiggers/factorial" }
maintenance = { status = "passively-maintained" }

[dev-dependencies]
approx = "0.3"
num-bigint = "0.3"

[dependencies]
num-traits = "0.2"
GSL = "1.1"
