[package]
name = "factorial"
version = "0.4.0"
authors = ["Thom Wiggers <thom@thomwiggers.nl>"]
description = "Convenient methods to compute the factorial, optionally checked."
repository = "https://github.com/thomwiggers/factorial/"
readme = "README.md"
keywords = ["mathematics", "maths", "factorial", "combinatorics"]
categories = ["science", "algorithms"]
edition = "2021"
license = "MIT"

[badges]
travis-ci = { repository = "thomwiggers/factorial" }
maintenance = { status = "passively-maintained" }

[dependencies]
num-traits = "0.2"
primal-sieve = "0.3.6"

[dev-dependencies]
num-bigint = "0.4"
criterion = { version = "0.6", features = ["html_reports"] }

[[bench]]
name = "benchmark"
harness = false
